--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ethjs-provider-signer": "^0.1.4",
     "ethjs-signer": "^0.1.1",
     "mocha": "^6.1.4",
-    "web3-eth-abi": "^1.0.0-beta.55"
+    "web3-eth-abi": "^1.0.0-beta.55",
+    "web3-utils": "^1.2.0"
   },
   "devDependencies": {
     "@types/assert": "^1.4.2",
