Implement functionality to get NFT data, add utils and tests, update addresses
Replace web3-utils with ethjs functionality

0.0.11

Add utils and tests

0.0.12

Fix wrong export

0.0.13

Add web3-utils again, needs to be tested when removed

Update addresses

0.0.14

Remove NewSilver name

Make generation of NFT data ABI dynamic


Remove tslint import/var/class name restrictions

Remove no longer needed NftData ABI

0.0.15

Remove new silver mention

Remove Newsilver

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tinlake",
-  "version": "0.0.10",
+  "version": "0.0.15",
   "description": "Centrifuge Tinlake Contracts Client",
   "main": "dist/Tinlake.js",
   "types": "dist/Tinlake.d.ts",
@@ -10,12 +10,13 @@
   ],
   "dependencies": {
     "bignumber.js": "^9.0.0",
+    "decimal.js-light": "^2.5.0",
     "ethjs": "^0.4.0",
     "ethjs-provider-signer": "^0.1.4",
     "ethjs-signer": "^0.1.1",
     "mocha": "^6.1.4",
     "web3-eth-abi": "^1.0.0-beta.55",
-    "web3-utils": "^1.0.0-beta.55"
+    "web3-utils": "^1.2.0"
   },
   "devDependencies": {
     "@types/assert": "^1.4.2",
@@ -38,7 +39,9 @@
   "scripts": {
     "build": "rollup -c",
     "watch": "rollup -cw",
-    "test": "npm run build && ts-mocha -p test/tsconfig.json test/**/*",
+    "test": "npm run test-unit && npm run test-integration",
+    "test-unit": "ts-mocha -p test/tsconfig.json src/**/*.spec.ts",
+    "test-integration": "npm run build && ts-mocha -p test/tsconfig.json test/**/*",
     "nodemon": "nodemon node inspect dist/Tinlake.js"
   },
   "repository": {
