--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "dependencies": {
     "bignumber.js": "^9.0.0",
+    "compare-versions": "^3.5.1",
     "decimal.js-light": "^2.5.0",
     "ethjs": "^0.4.0",
     "ethjs-provider-signer": "^0.1.4",
