--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "mocha": "^6.1.4",
     "randomstring": "^1.1.5",
     "web3-eth-abi": "^1.0.0-beta.55",
-    "web3-utils": "^1.2.0",
-    "tinlake": "@centrifuge/tinlake"
+    "web3-utils": "^1.2.0"
   },
   "devDependencies": {
     "@types/assert": "^1.4.2",
