--- a/.gitmodules
+++ b/.gitmodules
@@ -5,4 +5,4 @@
 
 [submodule "tinlake-proxy"]
 	path = tinlake-proxy
-	url = git@github.com:centrifuge/tinlake-proxy.git
+	url = https://github.com/centrifuge/tinlake-proxy
