--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 [submodule "tinlake-proxy"]
 	path = tinlake-proxy
 	url = https://github.com/centrifuge/tinlake-proxy
+
+[submodule "tinlake-actions"]
+	path = tinlake-actions
+	url = https://github.com/centrifuge/tinlake-actions
