--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,9 @@
 [submodule "tinlake-proxy"]
 	path = tinlake-proxy
 	url = https://github.com/centrifuge/tinlake-proxy
+	branch = master
 
 [submodule "tinlake-actions"]
 	path = tinlake-actions
 	url = https://github.com/centrifuge/tinlake-actions
+	branch = master
