--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "ethjs-signer": "^0.1.1",
     "mocha": "^6.1.4",
     "randomstring": "^1.1.5",
-    "web3-eth-abi": "^1.0.0-beta.55",
+    "web3-eth-abi": "^1.2.6",
     "web3-eth-contract": "^1.2.6",
     "web3-utils": "^1.2.0"
   },
