--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bignumber.js": "^9.0.0",
     "decimal.js-light": "^2.5.0",
+    "ethers": "^4.0.45",
     "ethjs": "^0.4.0",
     "ethjs-account": "^0.1.4",
     "ethjs-provider-signer": "^0.1.4",
