--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ cache:
     - node_modules
 before_install:
   - curl https://dapp.tools/install | sh
-  - /home/travis/.nix-profile/etc/profile.d/nix.sh
-  - dapp --use solc:0.5.12 test
+  - . $HOME/.nix-profile/etc/profile.d/nix.sh
 jobs:
   include:
   - stage: test
