fix travis: use solc 0.5.15

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ jobs:
   include:
   - stage: test
     script:
+      - dapp --use solc:0.5.15
       - dapp testnet &
       - ./bin/deploy.sh
       - npm run test
