--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,10 @@
     "lib": [
       "es2015"
     ],
+    // "typeRoots": [
+    //   "./node_modules/@types",
+    //   "./typings/"
+    // ],
     "resolveJsonModule": true
   },
   "include": [
@@ -20,6 +24,7 @@
   ],
   "exclude": [
     "node_modules",
-    "typings"
+    "**/*.spec.ts"
+
   ]
 }
