--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "test-unit": "ts-mocha -p test/tsconfig.json src/**/*.spec.ts --timeout 20000",
     "test-integration": "npm run build && ts-mocha -p test/tsconfig.json test/**/*",
     "nodemon": "nodemon node inspect dist/Tinlake.js",
-    "generate-docs": "typedoc --out docs --exclude \"./node_modules/**\"  --exclude \"./src/abi/**\" --exclude \"./src/actions/*.spec.ts\" --exclude \"./src/test/**\" --excludeExternals --excludeNotExported --ignoreCompilerErrors ./src",
+    "generate-docs": "typedoc --out docs --exclude \"./node_modules/**\"  --exclude \"./src/abi/**\" --exclude \"./src/index.ts\" --exclude \"./src/actions/*.spec.ts\" --exclude \"./src/test/**\" --excludeExternals --excludeNotExported --ignoreCompilerErrors ./src",
     "lint": "tslint --project .",
     "lint-fix": "tslint --fix -c ./tslint.json 'src/**/*{.ts,.tsx}'"
   },
