--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run generate-docs && npm run lint-fix && npm run build"
+      "pre-commit": "npm run generate-docs && npm run lint-fix && npm run build && git add ./dist/* && git add ./docs/*"
     }
   },
   "repository": {
